--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0FR587DK0D"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0FR587DK0D');
+      </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MakeBetter Technologies - AI Consulting & Custom Software Development</title>
@@ -22,6 +30,7 @@
     <meta name="twitter:title" content="MakeBetter Technologies - AI Consulting & Software Development" />
     <meta name="twitter:description" content="Global AI & ML consulting, custom software development, and cloud solutions for businesses worldwide." />
     <meta name="twitter:image" content="https://www.makebetter.tech/og-image.jpg" />
+    
   </head>
 
   <body>
